--- a/app/src/main/res/layout/fragment_create_sequence.xml
+++ b/app/src/main/res/layout/fragment_create_sequence.xml
@@ -5,20 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@drawable/background_gradient">
 
     <Button
         android:id="@+id/createSeqBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:background="@color/colorPrimaryLight"
+        android:background="@drawable/home_play_color"
         android:text="Save"
-        android:textColor="@color/colorPrimary"
+        android:fontFamily="@font/regular"
+        android:textColor="@color/colorButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -62,7 +63,7 @@
 
     <Button
         android:id="@+id/undoSeqAddBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -71,9 +72,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:background="@android:color/holo_red_light"
+        android:fontFamily="@font/regular"
+        android:background="@drawable/red_button"
         android:text="Undo"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
